added user controller, celebrate and email validation for the router in user creation

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "celebrate": "^12.1.1"
   }
 }
