--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "celebrate": "^12.1.1"
+    "celebrate": "^12.1.1",
+    "knex": "^0.21.1",
+    "sqlite3": "^4.2.0"
   }
 }
