--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "celebrate": "^12.1.1",
+    "cors": "^2.8.5",
     "knex": "^0.21.1",
     "sqlite3": "^4.2.0"
   }
