--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-icons": "^3.10.0",
+    "react-router": "^6.0.0-alpha.4",
+    "react-router-dom": "^6.0.0-alpha.4",
     "react-scripts": "3.4.1",
     "react-typing-animation": "^1.6.2"
   },
